<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/search_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_layout_height"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/search_layout_padding">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/searchBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/searchBtn"
                android:hint="@string/search_github_user_profile"
                android:imeOptions="actionSearch"
                android:inputType="text|textNoSuggestions|textFilter"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/searchBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/search_btn_start_end_margin"
                android:layout_marginEnd="@dimen/search_btn_start_end_margin"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/search_btn_padding"
                android:src="@mipmap/ic_search"
                android:tint="@color/title_color" />

        </RelativeLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:background="@color/placeholder_color"
        app:layout_constraintTop_toBottomOf="@+id/search_layout" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/user_layout_margin_top"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/userLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <include layout="@layout/layout_user" />

            <include layout="@layout/layout_user_follow_details" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <include layout="@layout/shimmer_effect_layout" />

        <include layout="@layout/error_layout" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
