<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/white"
    android:layout_marginTop="4dp">

    <include layout="@layout/layout_follower"
        android:id="@+id/layout_follower"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

    <View
        android:id="@+id/divider"
        android:background="@color/placeholder_color"
        android:layout_width="1dp"
        android:layout_height="match_parent"/>

    <include layout="@layout/layout_follower"
        android:id="@+id/layout_following"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>

</androidx.appcompat.widget.LinearLayoutCompat>